--- a/setting/TERATERM.INI
+++ b/setting/TERATERM.INI
@@ -82,7 +82,7 @@ ANSIColor=0,0,0,0, 1,255,0,0, 2,0,255,0, 3,255,255,0, 4,128,128,255, 5,255,0,255
 EnableContinuedLineCopy=on
 
 ; Mouse cursor type (arrow/ibeam/cross/hand)
-MouseCursor=ibeam
+MouseCursor=IBEAM
 
 ; Translucent window (0 - 255: transparency value)
 AlphaBlend=255
@@ -111,7 +111,7 @@ VTPos=-2147483648,-2147483648
 TEKPos=-2147483648,-2147483648
 
 ;	Terminal size
-TerminalSize=235,54
+TerminalSize=235,55
 ;	Terminal size=window size (on/off)
 TermIsWin=on
 ;	Auto window resizing option (on/off)
@@ -273,13 +273,13 @@ LogTypePlainText=on
 ; timestamp flag for Log (on/off)
 LogTimestamp=off
 ; without transfer dialog flag for Log (on/off)
-LogHideDialog=off
+LogHideDialog=on
 ; Default Log file name. You can specify strftime format to here.
-LogDefaultName=teraterm.log
+LogDefaultName=teraterm_&h_%x_%X.log
 ; Default path to save the log file.
-LogDefaultPath=
+LogDefaultPath=D:\documents\log\Tera term
 ; Auto start logging with default log file name.
-LogAutoStart=off
+LogAutoStart=on
 
 ; XMODEM option (checksum/crc/1k)
 XmodemOpt=checksum
@@ -347,7 +347,7 @@ BPLog=off
 ClearComBuffOnOpen=on
 
 ; Clear screen when window is resized
-ClearOnResize=on
+ClearOnResize=off
 
 ; Clear screen after the connection is closed
 ClearScreenOnCloseConnection=off
@@ -679,15 +679,16 @@ Interval=300
 
 [Hosts]
 Host1=192.168.56.102
-Host2=192.168.106.20
-Host3=192.168.106.23
-Host4=192.168.1.3
-Host5=sleep.mat-yan.jp
-Host6=shell.sourceforge.jp
-Host7=[fe80::201:80ff:fe36:cc7b%5]
-Host8=cgi3.tky.3web.ne.jp
-Host9=myhost.mydomain
-Host10=111.11.1.1
-Host11=myhost.mydomain /F=myhost.ini
-Host12=/C=1 ;serial port
-Host13=/R=readme.txt ;replay a file
+Host2=192.168.106.101
+Host3=192.168.106.20
+Host4=192.168.106.23
+Host5=192.168.1.3
+Host6=sleep.mat-yan.jp
+Host7=shell.sourceforge.jp
+Host8=[fe80::201:80ff:fe36:cc7b%5]
+Host9=cgi3.tky.3web.ne.jp
+Host10=myhost.mydomain
+Host11=111.11.1.1
+Host12=myhost.mydomain /F=myhost.ini
+Host13=/C=1 ;serial port
+Host14=/R=readme.txt ;replay a file
